bizinikiwi/pezframe/support/test/tests/runtime_ui/invalid_attribute.stderr
error: Invalid runtime macro call: unexpected attribute. Macro call must be bare, such as `#[pezframe_support::runtime]` or `#[runtime]`, or must specify the `legacy_ordering` attribute, such as `#[pezframe_support::runtime(legacy_ordering)]` or #[runtime(legacy_ordering)].
  --> tests/runtime_ui/invalid_attribute.rs:18:29
   |
18 | #[pezframe_support::runtime(dummy)]
   |                             ^^^^^
